--- a/iab/Dockerfile
+++ b/iab/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:11-alpine-jdk
+FROM amazoncorretto:8-a12-jdk
 MAINTAINER IAB
 COPY target/iab-0.0.1-SNAPSHOT.jar iab-app.jar
 ENTRYPOINT ["java","-jar","/iab-app.jar"]
